[gd_scene load_steps=3 format=3 uid="uid://c7rngejh3ce3i"]

[ext_resource type="Script" path="res://spheric_body/SphericBody.gd" id="1_no1mx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dai5o"]
radius = 20.0

[node name="SphericBody" type="Node2D" groups=["sphericBody"]]
script = ExtResource("1_no1mx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dai5o")

[node name="Data" type="Label" parent="."]
z_index = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -43.0
offset_right = 112.0
offset_bottom = -20.0
grow_vertical = 0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
